Spring changelog
(since 85.0: "!" prefix indicate backward compatibility broke)
(numbers in brackets normally mean the mantis ticket ID)

-- 102.0 --------------------------------------------------------
General:
 - Fix & Improve LoS performance
 ! remove LuaModUICtrl config setting
 ! remove ClassicGroundMoveType

Sim:
 - COB: deprecate unit/team/allyteam/global vars. Use lua functions instead.

Lua:
 - Add {Set,Get}FeatureRulesParam(s)
 ! Get{Game,Team,Unit,Feature}RulesParams will now return { paramName = value, ... }
 - You can now delete RulesParams by calling Set{Game,Team,Unit,Feature}RulesParam with no value argument or a nil one.
 - Add new Spring.ClearUnitGoal(unitID) callout.
 - add GamePaused and GameProgress callins to base gadget-handler
 - extend builtin uniform binding for custom Lua materials
   SEE "fix LuaMaterial uniform management" BELOW FOR THE
   LIST OF NEW LOCATION KEYS THAT ARE RECOGNIZED AS OF 102
 - Add Spring.GetFrameTimer(bool synced) to get a timer for the start of the frame
   this should give better results for camera interpolations.
 - Add an optional weaponNum argument to SetUnitTarget.

Save/Load:
 ! remove UseCREGSaveLoad and add /LuaSave which generates .slsf files
 ! compress creg saves
 - SaveFile can be specified in start script in order to start from a save

Rendering:
 - reduce number of team-color updates for custom shaders
 - use frame-extrapolation for smoother feature movement
 - draw all model nanoframe stages with shaders by default
 - skip drawing icons for void-space units
 - disable BumpWaterRefraction = 2 for now.

AI:
 - make skirmishAiCallback_Unit_getResource{Use,Make} not round their return values to ints
 - RulesParams are now accessible through skirmishAiCallback_{Game,Unit,Team,Feature}_getRulesParamValue{String,Float}

Misc:
 - make the time server spends in sleep calls configurable (for dedicated hosts)
 - rename the 'ReflectiveWater' config-key to 'Water' (to match the command)