@@ -5,10 +5,6 @@
 	CreateDirectory "$SMPROGRAMS\${PRODUCT_NAME}"
 	SetOutPath "$INSTDIR"
 
-	${If} ${SectionIsSelected} ${SEC_SPRINGLOBBY}
-		CreateShortCut "$SMPROGRAMS\${PRODUCT_NAME}\SpringLobby.lnk" "$INSTDIR\springlobby.exe"
-	${EndIf}
-
 	CreateShortCut "$SMPROGRAMS\${PRODUCT_NAME}\Test Spring.lnk" "$INSTDIR\spring.exe"
 	CreateShortCut "$SMPROGRAMS\${PRODUCT_NAME}\Test Spring (safemode).lnk" "$INSTDIR\spring.exe" "--safemode"
 	CreateShortCut "$SMPROGRAMS\${PRODUCT_NAME}\Uninstall Spring.lnk" "$INSTDIR\uninst.exe"
@@ -18,8 +14,6 @@
 !else
 
 	; Shortcuts
-	Delete "$SMPROGRAMS\${PRODUCT_NAME}\SpringLobby.lnk"
-	Delete "$SMPROGRAMS\${PRODUCT_NAME}\Zero-K Lobby.lnk"
 	Delete "$SMPROGRAMS\${PRODUCT_NAME}\Test Spring.lnk"
 	Delete "$SMPROGRAMS\${PRODUCT_NAME}\Test Spring (safemode).lnk"
 	Delete "$SMPROGRAMS\${PRODUCT_NAME}\Uninstall Spring.lnk"
